// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders as expected when disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 0.6,
        "padding": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="checkbox"
    accessibilityState={
      Object {
        "disabled": true,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/icons/checkboxOutline.png",
        }
      }
      style={
        Array [
          Object {
            "height": 16,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Checkbox renders as expected when selected is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="checkbox"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/icons/checkboxOutline.png",
        }
      }
      style={
        Array [
          Object {
            "height": 16,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Checkbox renders as expected when selected is true 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 1,
        "padding": 4,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="checkbox"
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/icons/checkboxFilled.png",
        }
      }
      style={
        Array [
          Object {
            "height": 16,
            "resizeMode": "contain",
            "tintColor": undefined,
            "width": 16,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
